Fixed overlap of coins

--- a/styles.css
+++ b/styles.css
@@ -43,13 +43,21 @@ img {
 
 .box {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 .cir {
     width: 100%;
     height: 100%;
+    transform: scale(0.6);
+    border-radius: 100%;
+    opacity: 90%;
+}
+
+.cir_both {
+    width: 50%;
+    height: 50%;
     transform: scale(0.6);
     border-radius: 100%;
     opacity: 90%;
